# BirdMOT

./: .gitignore  README.md  birdmot_05_2023_coco.json  birdmot_config.ini  docker-compose.yml  environment.yml  pyproject.toml
config/dataset_assembly/: dataset_assembly1.json  dataset_assembly2_rc_4good_tracks_in_val.json  dataset_assembly3_no_seq.json
config/experiments/: yolov8_sahi.json  yolov8n_sahi.json  yolov8n_sahi_dataset_assembly2_rc_4good_tracks_in_val.json  yolov8n_sahi_dataset_assembly3_no_seq.json  yolov8x_sahi.json
docker/: Dockerfile.gpu
experiments/: val_wo_tracking_dataset.json
scripts/: assemble_dataset.py  create_full_resolution_yolo_dataset.py  dataset_assembly2_rc_4good_tracks_in_val_pred.json  evaluate_on_test_set.py  evaluation.py  explore_coco_datasets.py  find_corrupt_imgs.py  low_bitrate_random_06_2023_coco_detection.json  merge_coco_files.py  predictions_to_coco_annotation_file.py  prepare_new_video.py  train_yolov8.py  train_yolov8_multi_gpu.py  tune_evaluation.py  yolov8_sliced_prediction.py
src/: demo_inference.py
src/BirdMOT/: metrics.py
src/BirdMOT/data/: DatasetCreator.py  SliceParams.py  augmentation.py  dat_ass2_rc_4goodtracks_in_val_val.json  dataset_stats.py  dataset_tools.py  mot_data.py  slice_data.py
src/BirdMOT/detection/: SahiPredictionParams.py  TrainingController.py  evaluate.py  fiftyone_evaluation.py  predict.py  sahi_label-studio-backend.py  yolov8.py
src/BirdMOT/helper/: config.py  cv.py  folder_structure.py  mlflow_tracking.py  sahi_utils.py  yolov_args_reader.py
src/BirdMOT/hyp_opt/: birdmot_05_2023_coco.json  feature_optimization.py  hyperparameter_optimization.py  hyperparameter_optimization_bayesian.py  ray_tune_custom.py  yolov8_tune.py  yolov8_tune_results.py
src/BirdMOT/hyperparameter_optimization/: yolov8_optimization.py
src/BirdMOT/metrics/: coco_metrics.py
src/BirdMOT/trackers/: StrongSortTracker.py  run_byte_track.py  run_ocsort_public.py
src/BirdMOT_web/: app.py
src/BirdMOT_web/pages/: SAHI_Postprocessing_Parameters_Evaluation.py  SAHI_Setup_Comparison.py
src/BirdMOT_web/utils/: charts.py
src/demo_data/: dat_ass2_rc_4goodtracks_in_val_train.json
src/streamlit/: app.py
src/streamlit/pages/: SAHI Setup Comparison.py  main.py  trainings.py
tests/: conftest.py
tests/fixtures/: birdmot_config.ini  coco_dataset.json  dataset_config.json  fixtures.py
tests/fixtures/coco_fixtures/: coco_categories.json
tests/fixtures/config/dataset_assembly/: test_assembly_config.json
tests/fixtures/config/experiments/: yolov8_sahi.json
tests/fixtures/local_data/configs/categories/: BirdMOT_categories_single_class.json  BirdMOT_categories_three_classes.json
tests/fixtures/local_data/tmp_eval_dir/: tmp_eval_state.pkl
tests/fixtures/mot_fixtures/MOT-1656471341_zoex_0149757_0149861/: seqinfo.ini
tests/integration/: test_dataset_integration.py  test_predict_evaluate_analyse.py  test_yolov8.py
tests/unit/: test_DatasetCreator.py  test_EvaluationController.py  test_TrainingController.py  test_config.py  test_dataset_stats.py  test_dataset_tools.py  test_sahi_utils.py  test_yolov_args_reader.py
(+165 files in other folders)
